# stitchArc

./: .gitignore  environment.yml  install_dependencies.sh  readme.md  run_stitch.sh
src/LOTlib3/: README.md
src/LOTlib3/StitchBindings/: bindings.py  python_to_stitch.py  stitch_to_python.py
src/flatliner/: flatliner.py  readme.md  test_run.py  transformations.py
src/flatliner/test_inputs/: loops.py
src/reArc/: README.md  curried_random.py  dsl.py  generators copy.py  re-arc_generator.py  save_generators.py  test_lambdas.py  transformed_functions.py  utils.py
src/reArc/generator_functions/: generate_007bbfb7.py  generate_00d62c1b.py  generate_017c7c7b.py  generate_025d127b.py  generate_045e512c.py  generate_0520fde7.py  generate_05269061.py  generate_05f2a901.py  generate_06df4c85.py  generate_08ed6ac7.py  generate_09629e4f.py  generate_0962bcdd.py  generate_0a938d79.py  generate_0b148d64.py  generate_0ca9ddb6.py  generate_0d3d703e.py  generate_0dfd9992.py  generate_0e206a2e.py  generate_10fcaaa3.py  generate_11852cab.py  generate_1190e5a7.py  generate_137eaa0f.py  generate_150deff5.py  generate_178fcbfb.py  generate_1a07d186.py  generate_1b2d62fb.py  generate_1b60fb0c.py  generate_1bfc4729.py  (+372 more)
src/stitchArc/: abstraction_summary.txt  abstraction_summary_annotated.txt  build_stitch_functions.py  inspect_abstractions.py  merge_stitch_outputs.py  plot_stitch_outputs.py  run_stitch.py  stitch_output.json  testing.py
src/stitch_bindings/: experimenting.py  pyproject.toml
src/stitch_bindings/src/: pipeline.py
src/stitch_bindings/stitch_core/: __init__.py
(+428 files in other folders)
