[build-system]
requires = ["maturin>=0.14"]
build-backend = "maturin"

[project]
name = "stitch_core"
version = "0.1.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


